implemented in backend the search query param in case of full list